# jaff

./: .gitignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  biome.json  jaff.network.schema.json  main.ipynb  main.py  mkdocs.yml  network.py  parsers.py  pyproject.toml  reaction.py  requirements.txt  species.py  zensical.toml
.github/workflows/: deploy-docs.yml  docs.yml  test-docs-examples.yml  test-notebooks.yml  test_docs_examples.py  tests.yml
.zed/: settings.json  tasks.json
docs/: README.md  api.md  code-generation.md  development.md  examples.md  index.md  installation.md  photochemistry.md  quickstart.md  requirements.txt  table-export.md
docs/about/: changelog.md  credits.md  license.md
docs/api/: cli.md  codegen.md  elements.md  file-parser.md  index.md  jaff-types.md  network.md  reaction.md  species.md
docs/assets/: logo.ai  logo_alt.ai  logo_dark.ai
docs/development/: code-style.md  contributing.md  installation.md  releases.md  testing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/javascripts/: layout.js  mathjax.js  mermaid.js
docs/reference/: formats.md  jaff-commands.md  jaff-template-syntax.md  primitive-variables.md  schema.md  template-variables.md
docs/stylesheets/: extra.css
docs/tutorials/: basic-usage.md  code-generation.md  custom-templates.md  network-analysis.md
docs/user-guide/: builder.md  code-generation.md  jaffgen-command.md  loading-networks.md  network-formats.md  rates.md  reactions.md  species.md  template-syntax.md
examples/: builder.ipynb  cpp_codegen.ipynb  energy_terms_option_a.ipynb  export_table.ipynb  fortran_codegen.ipynb  kokkos_cpp_generation.ipynb  kokkos_cpp_generation_missing_vars.ipynb  main.ipynb
networks/: GOW.dat_functions  uclchem_small_gas_network.csv
paper/: paper.md
src/jaff/: __init__.py  builder.py  cli.py  codegen.py  elements.py  fastlog.py  file_parser.py  function_parser.py  generate.py  jaff_types.py  network.py  parsers.py  photochemistry.py  preprocessor.py  reaction.py  species.py  sympy_json.py
src/jaff/codegen/: _template_engine.py  codegen.py
src/jaff/file_parser_templates/fortran_dlsodes/: commons.f90  fluxes.f90  ode.f90
src/jaff/file_parser_templates/kokkos_ode/: CMakeLists.txt  chemistry_ode.hpp
src/jaff/file_parser_templates/python_solve_ivp/: commons.py  ode.py
src/jaff/plugins/fortran_dlsodes/: plugin.py
src/jaff/plugins/kokkos_ode/: plugin.py
src/jaff/plugins/microphysics/: plugin.py
src/jaff/plugins/python_solve_ivp/: plugin.py
src/jaff/templates/fortran_dlsodes/: Makefile  commons.f90  commons.mod  ode.f90
src/jaff/templates/generator/fortran_dlsodes/: commons.f90  fluxes.f90  ode.f90  reactions.f90
src/jaff/templates/generator/kokkos_ode/: chemistry_ode.cpp  chemistry_ode.hpp
src/jaff/templates/generator/microphysics/: actual_network.H  actual_network_data.cpp  actual_rhs.H
src/jaff/templates/generator/python_solve_ivp/: commons.py  fluxes.py  rates.py
src/jaff/templates/kokkos_ode/: CMakeLists.txt  chemistry_ode.cpp  chemistry_ode.hpp  test_chemistry.cpp
src/jaff/templates/microphysics/: actual_network_data.cpp  actual_rhs.H
src/jaff/templates/preprocessor/fortran_dlsodes/: fluxes.f90  main.f90  reactions.f90
src/jaff/templates/preprocessor/kokkos_ode/: chemistry_ode.hpp
src/jaff/templates/preprocessor/microphysics/: actual_rhs.H
src/jaff/templates/preprocessor/python_solve_ivp/: rates.py
src/jaff/templates/python_solve_ivp/: commons.py  fluxes.py  main.py  ode.py  rates.py
tests/: __init__.py  test_cse_generation.py  test_languages.py  test_network_edge_cases.py  test_network_initialization.py  test_network_json.py  test_network_parsers.py  test_network_validation.py  test_ode_and_jac.py  test_repo_networks_json_roundtrip.py  test_sympy_json.py
tests/fixtures/: sample_kida_valid.dat_functions  test_jac_dedt.dat_functions
