[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaff"
version = "0.1.0"
description = "An astrochemical network parser"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "h5py>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
jaff = "jaff.cli:main"

[project.urls]
"Homepage" = "https://github.com/tgrassi/jaff"
"Bug Tracker" = "https://github.com/tgrassi/jaff/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaff = ["data/*.dat", "templates/**/*"]
